# FrogShield

./: .gitignore  LICENSE  README.md  config.yaml  demo_mock.py  demo_ollama.py  patterns.txt  pyproject.toml  requirements.txt  run_demo.sh
config_data/: boundary_refusal_keywords.txt  compliance_keywords.txt  patterns.txt  refusal_keywords.txt  sample_prompts.txt
frogshield/: __init__.py  input_validator.py  model_hardener.py  realtime_monitor.py
frogshield/tests/: __init__.py  test_hardening.py  test_monitoring.py  test_validation.py
frogshield/utils/: __init__.py  config_loader.py  text_analysis.py
